--- a/project-1/src/app/app.component.html
+++ b/project-1/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (selectFeature)="selectFeature($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes/>
-      <app-shopping-list/>
+      <app-recipes *ngIf="loadedFeature=='recipes'"/>
+      <app-shopping-list *ngIf="loadedFeature=='shopping-list'"/>
     </div>
   </div>
 </div>
