--- a/project-1/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/project-1/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>{{selectedRecipe.name}}</h1>
     </div>
 </div>
 
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">Description</div>
+    <div class="col-xs-12">{{selectedRecipe.description}}</div>
 </div>
 <div class="row">
     <div class="col-xs-12">Ingredients</div>
